EPBDS-2128 fix int range issue